alpine-debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine-debug-pod
spec:
  containers:
  - name: debugger
    image: alpine:latest
    command: ["sleep", "3600"]  # Keep the container running
