oci-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: test1
  annotations:
    kubernetes.io/ingress.class: "native-ic-ingress-class"  # Ensure OCI Ingress controller is used
    oci.oraclecloud.com/load-balancer-type: "lb"  # Public LB
    oci.oraclecloud.com/subnet1: "ocid1.subnet.oc1.ap-singapore-1.aaaaaaaarv5xdkoxqhhvzbxqzqwn5kkik2pvxnyg3lvf6jb43zl5w6euvqea"
spec:
  ingressClassName: native-ic-ingress-class
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-customer
            port:
              number: 80
